i18n: Update translation data from Transifex.

--- a/static/locale/tr/translations.json
+++ b/static/locale/tr/translations.json
@@ -457,6 +457,7 @@
   "Search results": "Sonuçları ara",
   "Search subscribers": "Aboneleri ara",
   "Search uploads...": "Yüklemeleri ara...",
+  "Searched for:": "",
   "See the rest of this message": "Bu iletinin devamını görüntüle",
   "Select date and time": "Tarih ve zaman seç",
   "Select default language": "Varsayılan dil seç",
