--- a/static/locale/sr/translations.json
+++ b/static/locale/sr/translations.json
@@ -1,8 +1,8 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "",
   "(This user has been deactivated)": "",
-  "(away)": "",
   "(no topic)": "",
+  "(unavailable)": "",
   "(you)": "",
   "1 day": "",
   "1 hour": "",
@@ -84,7 +84,8 @@
   "Are you sure you want to do this?": "",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "",
-  "Are you sure you want to revoke the invitation to <strong><span class=\"email\"></span></strong>?": "",
+  "Are you sure you want to revoke the invitation to <strong>__email__</strong>?": "",
+  "Are you sure you want to revoke this invitation link created by <strong>__referred_by__</strong>?": "",
   "Attach files": "",
   "Attachment deleted": "",
   "Audible desktop notifications": "",
@@ -116,7 +117,6 @@
   "Check all": "",
   "Choose avatar": "",
   "Choose custom color": "",
-  "Clear": "",
   "Clear avatar": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
@@ -191,7 +191,7 @@
   "Download file": "",
   "Download zuliprc": "",
   "Drafts": "",
-  "Drafts older than <strong>__draft_lifetime__</strong> days are automatically removed": "",
+  "Drafts older than <strong>__draft_lifetime__</strong> days are automatically removed.": "",
   "EDITED": "",
   "Edit": "",
   "Edit bot": "",
@@ -271,9 +271,9 @@
   "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "",
   "Invite": "",
+  "Invite link": "",
   "Invite more users": "",
   "Invited as": "",
-  "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
   "Invites": "",
@@ -289,6 +289,7 @@
   "Last active": "",
   "Last modified": "",
   "Last seen": "",
+  "Like Organization logo, but for the night theme.": "",
   "Linkifiers": "",
   "Local time": "",
   "Looking for our <a href=\"/integrations\" target=\"_blank\">Integrations</a> or <a href=\"/api\" target=\"_blank\">API</a> documentation?": "",
@@ -391,6 +392,7 @@
   "Organization avatar": "",
   "Organization description": "",
   "Organization logo": "",
+  "Organization logo for night mode": "",
   "Organization name": "",
   "Organization permissions": "",
   "Organization profile": "",
@@ -419,6 +421,7 @@
   "Preview": "",
   "Preview profile": "",
   "Private messages and @-mentions": "",
+  "Pro tip: You can use 'd' to open your drafts.": "",
   "Profile": "",
   "Profile field settings": "",
   "Quote and reply": "",
@@ -442,7 +445,8 @@
   "Restrict to a list of domains": "",
   "Retry": "",
   "Revoke": "",
-  "Revoke invitation to <span class=\"email\"></span>": "",
+  "Revoke invitation link": "",
+  "Revoke invitation to __email__": "",
   "Revoke now": "",
   "Role": "",
   "Save": "",
@@ -470,8 +474,8 @@
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
   "Set a status message": "",
-  "Set yourself to active": "",
-  "Set yourself to away": "",
+  "Set yourself as active": "",
+  "Set yourself as unavailable": "",
   "Settings": "\u041f\u043e\u0434\u0435\u0448\u0430\u0432\u0430\u045a\u0430",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -512,6 +516,7 @@
   "The email will be forwarded to this stream": "",
   "The recipient __recipient__ is not valid": "",
   "The recipients __recipients__ are not valid": "",
+  "The stream description cannot contain newline characters.": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
@@ -582,13 +587,13 @@
   "Video chat provider": "",
   "View edit history": "",
   "View file": "",
+  "View full profile": "",
   "View messages sent": "",
   "View private messages": "",
   "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
-  "View user profile": "",
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
@@ -621,6 +626,7 @@
   "You have nothing to send!": "",
   "You must be an organization administrator to create a stream without subscribing.": "",
   "You need to be running Zephyr mirroring in order to send messages!": "",
+  "You searched for:": "",
   "You subscribed to stream __stream__": "",
   "You unsubscribed from stream __stream__": "",
   "You're not subscribed to this stream. You will not be notified if other users reply to your message.": "",
@@ -642,6 +648,7 @@
   "__starred_status__ this message": "",
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "\u0438",
+  "clear": "",
   "cookie": "",
   "group private messages with __recipient__": "",
   "in 1 hour": "",
