Adjust german translation of mention
The content before was (backtranslated) __name__ has not subscribed this stream and will not be notified, except you will @-mentioned him.

--- a/static/locale/de/translations.json
+++ b/static/locale/de/translations.json
@@ -15,8 +15,8 @@
   "<b>Public:</b> anyone can join; anyone can view complete message history without joining": "<b>Öffentlich:</b> Jeder kann beitreten; Jeder kann ohne Beitritt alle gesendeten Nachrichten einsehen",
   "<p>Stream will be announced in <b>#__notifications_stream__</b>.</p>": "<p>Stream wird in <b>#__notifications_stream__</b> bekanntgegeben.</p>",
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Der Stream <b>__stream_name__</b> existiert nicht.</p><p>Verwalte Deine Abbonnements <a href='#streams/all'>auf Deiner Streamseite</a>.</p>",
-  "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird keine Benachrichtigungen erhalten, es sei denn, die Person wird @-erwähnt.",
-  "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird nicht Benachrichtigungen erhalten, falls er den Stream abonniert.",
+  "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird keine Benachrichtigungen erhalten, wenn die Person mit @-erwähnt wird.",
+  "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird nicht Benachrichtigungen erhalten, es sei denn, Du abonnierst den Stream für diese Person.",
   "A stream needs to have a name": "Ein Stream benötigt einen Namen.",
   "A stream with this name already exists": "Es existiert schon ein Stream mit diesem Namen",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "Ein breites Bild, das das Zulip-Logo in der oberen linken Ecke der Zulip-Apps ersetzt.",
