--- a/static/locale/gl/translations.json
+++ b/static/locale/gl/translations.json
@@ -503,7 +503,6 @@
   "Stream settings": "",
   "Stream successfully created!": "",
   "Streams": "",
-  "Submit": "",
   "Subscribe": "",
   "Subscribed": "",
   "Subscribed successfully!": "",
@@ -635,8 +634,8 @@
   "Your bots": "",
   "Your reminder note is empty!": "",
   "Zoom API key (required)": "",
-  "Zoom API secret (required)": "",
-  "Zoom user ID (required)": "",
+  "Zoom API secret (required if changed)": "",
+  "Zoom user ID or email address (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
