i18n: Update translation data from Transifex.

--- a/static/locale/it/translations.json
+++ b/static/locale/it/translations.json
@@ -62,7 +62,7 @@
   "All admins, and members with accounts at least 3 days old.": "Tutti gli amministratori e i membri con account vecchio almeno 3 giorni.",
   "All admins, and members with accounts at least N days old.": "Tutti gli amministratori e i membri con account vecchio almeno N giorni.",
   "All streams": "Tutti i canali",
-  "Allow message content in missed message emails": "",
+  "Allow message content in missed message emails": "Consenti il contenuto del messaggio nelle email dei messaggi persi",
   "Allow message deleting": "Abilita cancellazione dei messaggi",
   "Allow message editing": "Abilita modifica dei messaggi",
   "Allow subdomains": "Permetti sottodomini",
@@ -382,7 +382,7 @@
   "Only organization administrators can edit these settings.": "Solo gli amministratori possono modificare queste impostazioni.",
   "Only organization administrators can post.": "Solo gli amministratori possono inviare messaggi",
   "Only organization admins are allowed to post to this stream.": "Solo gli amministratori sono abilitati a scrivere su questo canale.",
-  "Only stream subscribers can add users to a private stream.": "",
+  "Only stream subscribers can add users to a private stream.": "Solo gli iscritti al canale posso aggiungere utenti al canale privato.",
   "Optional": "Opzionale",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "Oppure, per generare un link automatico a GitHub's <code>org/repo#1234</code> con sintassi:",
   "Organization": "Organizzazione",
@@ -456,7 +456,7 @@
   "Search results": "Risultati della ricerca",
   "Search subscribers": "Sottoscrittori della ricerca",
   "Search uploads...": "Cerca caricamenti...",
-  "Searched for:": "",
+  "Searched for:": "Cercato: ",
   "See the rest of this message": "Visualizza il resto del messaggio",
   "Select date and time": "Seleziona data e ora",
   "Select default language": "Seleziona la lingua di default",
@@ -594,7 +594,7 @@
   "Visual desktop notifications": "Notifiche desktop",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Attenzione: <strong>__stream_name__</strong> è un canale privato.",
   "We are about to have a poll.  Please wait for the question.": "Sta per partire un sondaggio. Per favore attendi la domanda.",
-  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "Raccomandiamo di non eliminare argomenti a meno che non sia necessario per ragioni di sicurezza o di gestione degli abusi. I messaggi eliminati possono confondere gli utenti che potrebbero successivamente visitare l'argomento tramite notifiche.",
   "Who can add bots": "Chi può aggiungere bot",
   "Who can add custom emoji": "Chi può aggiungere emoji personalizzati",
   "Who can create streams": "Chi può creare canali",
