--- a/static/locale/de/LC_MESSAGES/django.po
+++ b/static/locale/de/LC_MESSAGES/django.po
@@ -9,6 +9,7 @@
 # Daniel W. <daniel.wos.86@googlemail.com>, 2015
 # Dante Cassius <exaltedunmelody@gmail.com>, 2016
 # Dennis Stengele <dennis@stengele.me>, 2019
+# Fabian Neumann, 2019
 # Fabian Tribrunner <fabian@tribrunner.at>, 2019
 # martinlablans <github@martin.lablans.de>, 2018
 # Greg Price <gnprice@gmail.com>, 2017
@@ -26,8 +27,8 @@ msgstr ""
 "Project-Id-Version: Zulip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-14 00:07+0000\n"
-"PO-Revision-Date: 2019-02-14 20:52+0000\n"
-"Last-Translator: Robert Hönig <robhoenig@gmail.com>\n"
+"PO-Revision-Date: 2019-03-08 19:55+0000\n"
+"Last-Translator: Fabian Neumann\n"
 "Language-Team: German (http://www.transifex.com/zulip/zulip/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +55,7 @@ msgstr "Private Streams"
 #: analytics/views.py:178 templates/zerver/app/left_sidebar.html:17
 #: templates/zerver/app/left_sidebar.html:22
 msgid "Private messages"
-msgstr "Private Nachricht"
+msgstr "Private Nachrichten"
 
 #: analytics/views.py:179
 msgid "Group private messages"
