i18n: Update translation data from Transifex.

--- a/static/locale/gl/translations.json
+++ b/static/locale/gl/translations.json
@@ -10,6 +10,7 @@
   "10 minutes": "",
   "2 minutes": "",
   "24-hour time (17:00 instead of 5:00 PM)": "",
+  "<a href=\"/upgrade\" target=\"_blank\">Upgrade</a> for more space.": "",
   "<b>Private, protected history:</b> must be invited by a member; new members can only see messages sent after they join; hidden from non-administrator users": "",
   "<b>Private, shared history:</b> must be invited by a member; new members can view complete message history; hidden from non-administrator users": "",
   "<b>Public:</b> anyone can join; anyone can view complete message history without joining": "",
@@ -123,7 +124,6 @@
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
   "Close": "",
   "Collapse": "",
-  "Compose a message to stream <b>__stream.name__</b>": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "",
   "Configure the authentication methods for your organization.": "",
   "Configure the default streams new users are subscribed to when joining your organization.": "",
@@ -332,7 +332,6 @@
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
-  "Narrow to stream <b>__stream.name__</b>": "",
   "Narrow to topic <b>__topic_name__</b>": "",
   "Narrow to your private messages with __display_reply_to__": "",
   "Never": "",
@@ -397,6 +396,7 @@
   "Organization permissions": "",
   "Organization profile": "",
   "Organization settings": "",
+  "Organization using __percent_used__% of __upload_quota__.": "",
   "Other notification settings": "",
   "Other permissions": "",
   "Other settings": "",
@@ -552,6 +552,7 @@
   "Unmute the topic <b>__topic_name__</b>": "",
   "Unpin stream <b>__stream.name__</b> from top": "",
   "Unstar": "",
+  "Unstar all messages": "",
   "Unsubscribe": "",
   "Unsubscribed successfully!": "",
   "Up to N minutes after posting": "",
@@ -603,6 +604,7 @@
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Would you like to unstar all starred messages?  This action cannot be undone.": "",
   "Write": "",
   "Yes": "",
   "Yes, delete this stream": "",
