--- a/static/locale/it/translations.json
+++ b/static/locale/it/translations.json
@@ -62,7 +62,7 @@
   "All admins, and members with accounts at least 3 days old.": "Tutti gli amministratori e i membri con account vecchio almeno 3 giorni.",
   "All admins, and members with accounts at least N days old.": "Tutti gli amministratori e i membri con account vecchio almeno N giorni.",
   "All streams": "Tutti i canali",
-  "Allow message content in missed message emails": "",
+  "Allow message content in missed message emails": "Consenti il contenuto del messaggio nelle email dei messaggi persi",
   "Allow message deleting": "Abilita cancellazione dei messaggi",
   "Allow message editing": "Abilita modifica dei messaggi",
   "Allow subdomains": "Permetti sottodomini",
@@ -80,7 +80,7 @@
   "Are invitations required for joining the organization?": "E' richiesto un invito per entrare nell'organizzazione?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Sei sicuro di voler creare il canale '__stream_name__' e sottoscrivere __count__ utenti?",
   "Are you sure you want to delete <b>__group_name__</b>?": "Sei sicuro di voler cancellare <b>__group_name__</b>?",
-  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "Sei sicuro di voler cancellare tutti i messaggi in <b>__topic_name__</b>?",
   "Are you sure you want to do this?": "Sei sicuro di volerlo fare?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Sei sicuro di voler menzionare tutte le  <strong>__count__</strong> persone in questo canale?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Sei sicuro di voler rispedire l'invito a <strong><span class=\"email\"></span></strong>?",
@@ -101,7 +101,7 @@
   "By deactivating your account, you will be logged out immediately.": "Disattivando il tuo account, sarai scollegato immediatamente.",
   "Cancel": "Cancella",
   "Change": "Modifica",
-  "Change bot info and owner": "",
+  "Change bot info and owner": "Modifica le info sul bot e il proprietario",
   "Change email": "Modifica email",
   "Change full name": "Modifica il nome",
   "Change later messages to this topic": "imposta a questo argomento i messaggi successivi",
@@ -156,12 +156,12 @@
   "Deactivated users": "Utenti disattivati",
   "Deactivation encountered an error. Please reload and try again.": "Errore durante la disattivazione: per favore ricarica e riprova.",
   "Default language": "Lingua di default",
-  "Default settings for new users joining this organization.": "",
+  "Default settings for new users joining this organization.": "Impostazioni di default per i nuovi utenti che entrano in questa organizzazione.",
   "Default streams": "Canali di default",
   "Default user settings": "Impostazioni utente di default",
   "Delete": "Cancella",
   "Delete alert word": "Cancella parola allarme",
-  "Delete all messages in <b>__topic_name__</b>": "",
+  "Delete all messages in <b>__topic_name__</b>": "Cancella tutti i messaggi in <b>__topic_name__</b>",
   "Delete avatar": "Cancella avatar",
   "Delete bot": "Cancella bot",
   "Delete draft": "Cancella bozza",
@@ -169,7 +169,7 @@
   "Delete icon": "Cancella icona",
   "Delete logo": "Cancella logo",
   "Delete message": "Cancella messaggio",
-  "Delete messages": "",
+  "Delete messages": "Cancella messaggi",
   "Delete stream": "Cancella canale",
   "Delete topic": "Cancella argomento",
   "Delete user group": "Cancella gruppo di utenti",
@@ -246,7 +246,7 @@
   "Forgotten it?": "Dimenticato?",
   "Formatting": "Sto formattando",
   "Full name": "Nome",
-  "Generate invite link": "",
+  "Generate invite link": "Genera link di invito",
   "Generate new API key": "Genera nuova chiave API",
   "Generating link...": "Generazione del link...",
   "Generic": "Generico",
@@ -254,7 +254,7 @@
   "Go back": "Indietro",
   "Got it!": "Capito!",
   "Guest": "Ospite",
-  "Guests cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "Gli ospiti non posso modificare le emoji custom.",
   "High contrast mode": "Modalità ad alto conrasto",
   "Hint": "Suggerimento",
   "Hint (up to 80 characters)": "Suggerimento (fino a 80 caratteri)",
@@ -268,16 +268,16 @@
   "Interface": "Interfaccia",
   "Invalid slash command. Check if you are missing a space after the command.": "Comando slash invalido. Verifica se manca uno spazio dopo il comando",
   "Invalid stream id": "Identificativo canale non valido",
-  "Invitation link: <a href=\"__link__\">__link__</a>": "",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "Link di invito:<a href=\"__link__\">__link__</a>",
   "Invitations": "Inviti",
   "Invite": "Invita",
   "Invite more users": "Invita altri utenti",
-  "Invited as": "",
+  "Invited as": "Invitato come",
   "Invited as administrator": "Invitato come amministratore",
   "Invited at": "Invitato a",
   "Invited by": "Invitato da",
   "Invites": "Invita",
-  "Inviting...": "",
+  "Inviting...": "Sto invitando...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Manchi da un po'! Dalla tua ultima visita, hai ricevuto  <b>__unread_count__</b> nuovi messaggi.",
   "Joined": "Unito",
   "Joining the organization": "Sto entrando nell'organizzazione",
@@ -382,7 +382,7 @@
   "Only organization administrators can edit these settings.": "Solo gli amministratori possono modificare queste impostazioni.",
   "Only organization administrators can post.": "Solo gli amministratori possono inviare messaggi",
   "Only organization admins are allowed to post to this stream.": "Solo gli amministratori sono abilitati a scrivere su questo canale.",
-  "Only stream subscribers can add users to a private stream.": "",
+  "Only stream subscribers can add users to a private stream.": "Solo gli iscritti al canale posso aggiungere utenti al canale privato.",
   "Optional": "Opzionale",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "Oppure, per generare un link automatico a GitHub's <code>org/repo#1234</code> con sintassi:",
   "Organization": "Organizzazione",
@@ -397,7 +397,7 @@
   "Organization settings": "Impostazione dell'organizzazione",
   "Other notification settings": "Altre impostazioni delle notifiche",
   "Other permissions": "Altri permessi",
-  "Other settings": "",
+  "Other settings": "Altre impostazioni",
   "Outgoing webhook message format": "Formato messaggio webhook in uscita",
   "Owner": "Proprietario",
   "Password": "Password",
@@ -456,7 +456,7 @@
   "Search results": "Risultati della ricerca",
   "Search subscribers": "Sottoscrittori della ricerca",
   "Search uploads...": "Cerca caricamenti...",
-  "Searched for:": "",
+  "Searched for:": "Cercato: ",
   "See the rest of this message": "Visualizza il resto del messaggio",
   "Select date and time": "Seleziona data e ora",
   "Select default language": "Seleziona la lingua di default",
@@ -527,7 +527,7 @@
   "Time settings": "Impostazioni dell'orario",
   "Time zone": "Fuso orario",
   "Time's up!": "Tempo terminato!",
-  "Tip: You can also send \"/poll Some question\"": "",
+  "Tip: You can also send \"/poll Some question\"": "Tip: Puoi anche inviare \"/poll per Qualche domanda",
   "Today": "Oggi",
   "Toggle subscription": "Cambia sottoscrizione",
   "Tomorrow": "Domani",
@@ -594,13 +594,13 @@
   "Visual desktop notifications": "Notifiche desktop",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Attenzione: <strong>__stream_name__</strong> è un canale privato.",
   "We are about to have a poll.  Please wait for the question.": "Sta per partire un sondaggio. Per favore attendi la domanda.",
-  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "Raccomandiamo di non eliminare argomenti a meno che non sia necessario per ragioni di sicurezza o di gestione degli abusi. I messaggi eliminati possono confondere gli utenti che potrebbero successivamente visitare l'argomento tramite notifiche.",
   "Who can add bots": "Chi può aggiungere bot",
   "Who can add custom emoji": "Chi può aggiungere emoji personalizzati",
   "Who can create streams": "Chi può creare canali",
   "Who can see users email addresses": "Chi può vedere gli indirizzi email degli utenti",
   "Working\u2026": "Elaborazione...",
-  "Write": "",
+  "Write": "Scrivi",
   "Yes": "Sì",
   "Yes, delete this stream": "Sì, cancella questo canale",
   "Yes, send": "Sì, spedisci",
@@ -629,9 +629,9 @@
   "Your account": "Il tuo account",
   "Your bots": "I tuoi bot",
   "Your reminder note is empty!": "Il tuo promemoria è vuoto!",
-  "Zoom API key (required)": "",
-  "Zoom API secret (required)": "",
-  "Zoom user ID (required)": "",
+  "Zoom API key (required)": "Zoom API Key (richiesta)",
+  "Zoom API secret (required)": "Zoom API secret (richiesta)",
+  "Zoom user ID (required)": "Zoom user ID (richiesta)",
   "[Condense this message]": "[Rimpicciolisci questo messaggio]",
   "[Configure]": "[Configura]",
   "[Disable]": "[Disabilita]",
