--- a/locale/pl/translations.json
+++ b/locale/pl/translations.json
@@ -1,6 +1,6 @@
 {
   "(This user has been deactivated)": "(Ten użytkownik został deaktywowany)",
-  "(forever)": "",
+  "(forever)": "na zawsze",
   "(no description)": "(brak opisu)",
   "(no topic)": "(brak wątku)",
   "(unavailable)": "(niedostępny)",
@@ -49,7 +49,7 @@
   "Add profile field": "Dodaj pole profilu",
   "Add question": "Dodaj pytanie",
   "Add stream": "Dodaj kanał",
-  "Add subscribers. Use #streamname to subscribe a whole stream": "",
+  "Add subscribers. Use #streamname to subscribe a whole stream": "Dodaj subskrybentów. Użyj #nazwakanału, aby zasubskrybować cały kanał",
   "Add task": "Dodaj zadanie",
   "Add video call": "Dodaj połączenie wideo",
   "Added successfully!": "Dodano pomyślnie!",
@@ -92,7 +92,7 @@
   "Any time": "W dowolnym momencie",
   "Anyone in this organization can add bots": "Każdy członek tej organizacji może dodawać boty",
   "April": "Kwiecień",
-  "Are invitations required for joining the organization?": "",
+  "Are invitations required for joining the organization?": "Czy aby dołączyć do organizacji, wymagane jest zaproszenie?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "",
   "Are you sure you want to delete <b>__group_name__</b>?": "Czy na pewno chcesz usunąć <b>__group_name__</b>?",
   "Are you sure you want to do this?": "Na pewno chcesz to zrobić?",
@@ -111,9 +111,9 @@
   "Automatic": "Automatycznie",
   "Avatar from Gravatar": "Awatar z Gravatar",
   "Bot": "Bot",
-  "Bot email": "",
+  "Bot email": "E-mail bota",
   "Bot email (a-z, 0-9, and dashes only)": "",
-  "Bot type": "",
+  "Bot type": "Typ bota",
   "Bots": "Boty",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Deazktywując <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, wylogujesz go natychmiast.",
   "By deactivating your account, you will be logged out immediately.": "Po dezaktywacji konta zostaniesz natychmiast wylogowany.",
@@ -135,7 +135,7 @@
   "Clear profile picture": "Wyczyść zdjęcie profilowe",
   "Click anywhere on a message to reply.": "Kliknij gdziekolwiek na wiadomości, żeby odpowiedzieć.",
   "Click outside the input box to save. We'll automatically notify anyone that was added or removed.": "",
-  "Click to join video call": "",
+  "Click to join video call": "Kliknij, aby dołączyć do połączenia wideo",
   "Close": "Zamknij",
   "Collapse": "Zmniejsz",
   "Color scheme": "Schemat kolorów",
@@ -731,8 +731,8 @@
   "Yes, delete this stream": "Tak, skasuj ten kanał",
   "Yes, send": "Tak, wyślij",
   "Yes, subscribe __count__ users!": "",
-  "Yes. Members and admins can send invitations.": "",
-  "Yes. Only admins can send invitations.": "",
+  "Yes. Members and admins can send invitations.": "Tak. Członkowie i administratorzy mogą wysyłać zaproszenia.",
+  "Yes. Only admins can send invitations.": "Tak. Tylko administratorzy mogą wysyłać zaproszenia.",
   "Yesterday": "Wczoraj",
   "You (click to remove) reacted with __emoji_name__": "",
   "You and __display_reply_to__": "Ty i __display_reply_to__",
@@ -768,7 +768,7 @@
   "__minutes__ minutes ago": "__minutes__ minut temu",
   "__seconds__ sec to edit": "__seconds__ sek. na edycję",
   "__starred_status__ this message": "",
-  "__username__ reacted with __emoji_name__": "",
+  "__username__ reacted with __emoji_name__": "__username__ zareagował: __emoji_name__",
   "and": "i",
   "beta": "beta",
   "clear": "wyczyść",
